--- a/css/popup-style.css
+++ b/css/popup-style.css
@@ -3,6 +3,8 @@ html, body {
   background-color:#ffffff;
   font-family:sans-serif;
   font-size:12pt;
+  margin:0;
+  padding:0;
 }
 
 .column-container {
