--- a/css/popup-style.css
+++ b/css/popup-style.css
@@ -66,3 +66,15 @@ html, body {
   font-weight:bold;
   color:#0ba6aa;
 }
+
+#links {
+  margin-bottom: 2px;
+}
+
+#links a {
+  font-weight:bold;
+  color:#0ba6aa;
+  text-decoration: none;
+  margin-left: 5px;
+  float: right;
+}
